--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     volumes:
       - .:/app
     environment:
-      - DEBUG=1
+      - DEBUG=False
       - SECRET_KEY=123
       - ALLOWED_HOSTS=localhost, 127.0.0.1
       - DB_HOST=db
@@ -46,7 +46,7 @@ services:
     volumes:
       - .:/app
     environment:
-      - DEBUG=1
+      - DEBUG=False
       - SECRET_KEY=123
       - ALLOWED_HOSTS=localhost, 127.0.0.1
       - DB_HOST=db
@@ -58,20 +58,20 @@ services:
       - django
       - db
       - redis
+      - celery
 
 
   django:
     container_name: django
     build:
       context: .
-    # command: gunicorn cowshed_api.wsgi:application --bind 0.0.0.0:8000
-    command : python manage.py runserver 0.0.0.0:8000
+    command: gunicorn cowshed_api.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - .:/app
     ports:
       - 8000:8000
     environment:
-      - DEBUG=1
+      - DEBUG=False
       - SECRET_KEY=123
       - ALLOWED_HOSTS=localhost,127.0.0.1
       - DB_HOST=db
