--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - POSTGRES_DB=devdb
       - POSTGRES_USER=devuser
       - POSTGRES_PASSWORD=changeme
+    healthcheck:
+      test: pg_isready
 
   celery:
     container_name: celery
@@ -34,15 +36,18 @@ services:
       - DB_PASS=changeme
       - DB_PORT=5432
     depends_on:
-      - django
-      - db
-      - redis
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_started
+
 
   celery-beat:
     container_name: celery-beat
     build:
       context: .
     command: celery --app=cowshed_api beat -l INFO
+    restart: on-failure
     volumes:
       - .:/app
     environment:
@@ -55,11 +60,10 @@ services:
       - DB_PASS=changeme
       - DB_PORT=5432
     depends_on:
-      - django
-      - db
-      - redis
-      - celery
-
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_started
 
   django:
     container_name: django
@@ -82,7 +86,6 @@ services:
     depends_on:
       - redis
       - db
-
 
 volumes:
   dev-db-data:
