dev user for checks

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,8 @@ services:
       - POSTGRES_USER=devuser
       - POSTGRES_PASSWORD=changeme
     healthcheck:
-      test: pg_isready
+      # test: pg_isready -U devuser
+      test: ["CMD", "pg_isready", "-U", "devuser", "-d", "devdb"]
 
   celery:
     container_name: celery
